--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "dependencies": {
     "angular": "^1.3.15",
-    "angular-route": "^1.3.15"
-  },  
+    "angular-route": "^1.3.15",
+    "bootstrap": "^3.3.7"
+  },
   "devDependencies": {
     "lite-server": "^2.3.0"
   },
