--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "his-pcu-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "Client for HIS PCU module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "lite-server -c src/config/config.json"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,14 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Dr-Coders/his-pcu-client/issues"
+  },
+  "dependencies": {
+    "angular": "^1.3.15",
+    "angular-route": "^1.3.15",
+    "bootstrap": "^3.3.7"
+  },
+  "devDependencies": {
+    "lite-server": "^2.3.0"
   },
   "homepage": "https://github.com/Dr-Coders/his-pcu-client#readme"
 }
